// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the unexpected error alert component renders as expected if there is an error and not saving 1`] = `
<div
  aria-hidden={false}
  aria-live="polite"
  className="alert--unexpected-error alert--unexpected-error__active"
>
  <Alert
    heading="There's been an unexpected error."
    role="alertdialog"
    variation="warn"
  >
    We weren‘t able to save your latest changes. Try saving in a few minutes. If you continue to see this message, refresh your browser. Before this issue is resolved, new changes may be lost if you continue to make edits or if you refresh your browser.
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        onClick={[MockFunction]}
        type="button"
        variation="primary"
      >
        Save
      </Button>
    </p>
  </Alert>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is and error and is saving 1`] = `
<div
  aria-hidden={false}
  aria-live="polite"
  className="alert--unexpected-error alert--unexpected-error__active"
>
  <Alert
    heading="There's been an unexpected error."
    role="alertdialog"
    variation="warn"
  >
    We weren‘t able to save your latest changes. Try saving in a few minutes. If you continue to see this message, refresh your browser. Before this issue is resolved, new changes may be lost if you continue to make edits or if you refresh your browser.
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        onClick={[MockFunction]}
        type="button"
        variation="primary"
      >
        <Spinner />
         Saving
      </Button>
    </p>
  </Alert>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is no error and not saving 1`] = `
<div
  aria-hidden={true}
  aria-live="polite"
  className="alert--unexpected-error "
>
  <Alert
    heading="There's been an unexpected error."
    role="alertdialog"
    variation="warn"
  >
    We weren‘t able to save your latest changes. Try saving in a few minutes. If you continue to see this message, refresh your browser. Before this issue is resolved, new changes may be lost if you continue to make edits or if you refresh your browser.
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        onClick={[MockFunction]}
        type="button"
        variation="primary"
      >
        Save
      </Button>
    </p>
  </Alert>
</div>
`;
